--- a/Good Neighbor/Good-Neighbor-Info.plist
+++ b/Good Neighbor/Good-Neighbor-Info.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Recoleta-Black.ttf</string>
+		<string>Recoleta-Bold.ttf</string>
+		<string>Recoleta-Light.ttf</string>
+		<string>Recoleta-Medium.ttf</string>
+		<string>Recoleta-Regular.ttf</string>
+		<string>Recoleta-SemiBold.ttf</string>
+		<string>Recoleta-Thin.ttf</string>
+		<string>RecoletaAlt-Black.ttf</string>
+		<string>RecoletaAlt-Bold.ttf</string>
+		<string>RecoletaAlt-Light.ttf</string>
+		<string>RecoletaAlt-Medium.ttf</string>
+		<string>RecoletaAlt-Regular.ttf</string>
+		<string>RecoletaAlt-SemiBold.ttf</string>
+		<string>RecoletaAlt-Thin.ttf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
