--- a/Good Neighbor/Good-Neighbor-Info.plist
+++ b/Good Neighbor/Good-Neighbor-Info.plist
@@ -26,5 +26,14 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>launchScreen</string>
+		<key>UIImageName</key>
+		<string>launchImage</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
